Add ConnectionDetail support to Pulsar auto-configuration