@@ -277,4 +277,5 @@ tasks.named("checkSpringConfigurationMetadata").configure {
 
 test {
 	jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
+	jvmArgs += "--add-opens=java.base/sun.net=ALL-UNNAMED"
 }
